...
    onDragEnd: () -> Unit = {},
) {
    Box(modifier = Modifier.fillMaxSize()) {
        // Group grid with items
        GroupGrid(
            modifier = Modifier
                .testTag(if (isSystemInDarkTheme()) "darkTheme" else "lightTheme")
                .fillMaxSize(),
            lazyGridState = lazyGridState,
            allChildren = allChildren,
            trackerClickListeners = trackerClickListeners ?: TrackerClickListeners(),
            graphStatClickListeners = graphStatClickListeners ?: GraphStatClickListeners(),
            groupClickListeners = groupClickListeners ?: GroupClickListeners(),
...
            exit = fabExitAnimation
        ) {
            FloatingActionButton(
                onClick = onQueueAddAllClicked,
                containerColor = MaterialTheme.colorScheme.primary,
                modifier = Modifier
                    .testTag("trackAllFab")
                    .padding(WindowInsets.navigationBars.asPaddingValues())
                    .then(Modifier.padding(inputSpacingLarge))
            ) {
                Icon(
                    painter = painterResource(id = R.drawable.queue_add_box),
                    contentDescription = stringResource(id = R.string.track_all)
...
        }
        lastSize = allChildren.size
    }

    LazyVerticalGrid(
        modifier = Modifier
            .testTag("groupGrid")
            .fillMaxSize(),
        state = lazyGridState,
        columns = GridCells.Fixed(columnCount),
        contentPadding = WindowInsets.safeDrawing
            .only(WindowInsetsSides.Horizontal + WindowInsetsSides.Bottom)
            .asPaddingValues() + PaddingValues(vertical = cardMarginSmall),
...
