...
import org.threeten.bp.OffsetDateTime
import org.threeten.bp.Period

private val json = Json { ignoreUnknownKeys = true }

suspend fun createScreenshotsGroup(dataInteractor: DataInteractor) {
    val outerGroupId = dataInteractor.insertGroup(createGroup("Screenshots")).componentId
    createGroupListForScreenshots(dataInteractor, outerGroupId)
    val exerciseFeatureId = createDailyGroup(dataInteractor, outerGroupId)
    createExerciseGroup(dataInteractor, outerGroupId)
    createRestDaysGroup(dataInteractor, outerGroupId)
    createFunctionsGroup(dataInteractor, outerGroupId)
    createReminders(dataInteractor, exerciseFeatureId)
...
    )
}

private suspend fun createGroupListForScreenshots(dataInteractor: DataInteractor, parent: Long) {
    val groupListGroup = dataInteractor.insertGroup(
        createGroup(
            name = "Track & Graph                              Groups list",
            parentGroupId = parent
        )
    )

    val mealTime = dataInteractor.insertGroup(
        createGroup(
...
    )

    return sleepTracker
}

private suspend fun createFunctionsGroup(dataInteractor: DataInteractor, parent: Long) {
    val groupId = dataInteractor.insertGroup(createGroup("Functions", parentGroupId = parent)).componentId

    val runningTracker = dataInteractor.createTracker(
        createTrackerRequest(
            name = "Running ",
            groupId = groupId,
            dataType = DataType.DURATION,
...
