...
    modifier = Modifier
        .padding(cardMarginSmall)
        .fillMaxWidth()
) {
    Card(
        modifier = modifier
            .testTag("graphStatCard")
            .fillMaxWidth()
            .let {
                if (clickListener != null) {
                    it.clickable { clickListener.onClick(graphStatViewData) }
                } else it
            },
...
