...
        shadowElevation = if (isElevated) cardElevation * 3 else cardElevation,
        color = MaterialTheme.colorScheme.surface,
        shape = MaterialTheme.shapes.medium,
    ) {
        Box(
            modifier = Modifier
                .testTag("groupCard")
                .fillMaxWidth()
                .defaultMinSize(minHeight = minHeight)
                .let { if (onClick != null) it.clickable { onClick(group) } else it }
        ) {
            // Corner decoration image
            Image(
...
