...
    when (graphStatViewData.state) {
        IGraphStatViewData.State.LOADING -> {
            Box(
                modifier = modifier.heightIn(min = guessHeight(graphStatViewData)),
                contentAlignment = Alignment.Center
            ) { CircularProgressIndicator(
                modifier = Modifier.testTag("loadingIndicator")
            ) }
        }

        IGraphStatViewData.State.ERROR -> GraphError(modifier, graphStatViewData)

        else -> GraphStatInnerViewOrLuaGraph(
...
